--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ReadingList</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/reading-list/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.svg">
 <link rel="stylesheet" href="styles.d65c3543b73953243f0e.css"></head>
 <body class="mat-typography">
