--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ReadingList</title>
-  <base href="/reading-list/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Reading List</title>
+  <meta name="description" content="A simple tool to keep track of your reading list">
+  <meta name="author" content="Jansen N J">
+  <link rel="manifest" href="/assets/manifest.webmanifest">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.svg">
-<link rel="stylesheet" href="styles.eb9f7fe1c70d0ea42c36.css"></head>
+</head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.f8df70df40c71c263f59.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
