--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Reading List</title>
   <meta name="description" content="A simple tool to keep track of your reading list">
   <meta name="author" content="Jansen N J">
-  <link rel="manifest" href="/assets/manifest.webmanifest">
+  <link rel="manifest" href="assets/manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.svg">
 </head>
